--- a/parser/sites/15.html
+++ b/parser/sites/15.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html dir="ltr" lang="ru-ru">
 <head>
       <base href="http://mangomebel58.ru/kukhni-v-penze.html" />
