--- a/parser/sites/16.html
+++ b/parser/sites/16.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="ru" class="no-js">
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
